--- a/index.html
+++ b/index.html
@@ -39,15 +39,26 @@
                 >
                   <span class="absolute -inset-1.5"></span>
                   <span class="sr-only">Open user menu</span>
-                  <img
-                    class="h-8 w-8 rounded-full"
-                    src="https://img.freepik.com/free-vector/new-2023-twitter-logo-x-icon-design_1017-45418.jpg?t=st=1724255208~exp=1724258808~hmac=f0814bf84c4ff13b7f7d2a9985643a52f62622856abfbcaf9bb4559c6ec05420&w=826"
-                    alt=""
-                  />
+                  <button
+                    type="button"
+                    class="relative flex rounded-full bg-[#7a43de] border-2 border-transparent hover:border-indigo-600 text-sm focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+                    id="user-menu-button"
+                    aria-expanded="false"
+                    aria-haspopup="true"
+                    onclick="window.open('https://x.com/redditCheeno', '_blank')"
+                  >
+                    <span class="absolute -inset-1.5"></span>
+                    <span class="sr-only">Open user menu</span>
+                    <img
+                      class="h-8 w-8 rounded-full"
+                      src="https://img.freepik.com/free-vector/new-2023-twitter-logo-x-icon-design_1017-45418.jpg?t=st=1724255208~exp=1724258808~hmac=f0814bf84c4ff13b7f7d2a9985643a52f62622856abfbcaf9bb4559c6ec05420&w=826"
+                      alt=""
+                    />
+                  </button>
                 </button>
               </div>
             </div>
-            <div class="relative ml-3">
+            <!-- <div class="relative ml-3">
               <div>
                 <button
                   type="button"
@@ -65,12 +76,13 @@
                   />
                 </button>
               </div>
-            </div>
+            </div> -->
             <div class="relative ml-3">
               <div>
                 <button
                   type="button"
                   class="bg-[#7a43de] text-white px-3 py-2 rounded-md border-2 border-transparent hover:border-black"
+                  onclick="window.open('https://sunpump.meme/token/TMiqVRZ928EsLgn1rNtC1kx5zg3LaQwetW', '_blank')"
                 >
                   BUY NOW
                   <i class="fa fa-bolt" aria-hidden="true"></i>
@@ -100,6 +112,7 @@
           <button
             type="button"
             class="flex gap-2 items-center bg-[#7a43de] text-white px-3 py-2 rounded-md border-2 border-transparent hover:border-black"
+            onclick="window.open('https://sunpump.meme/token/TMiqVRZ928EsLgn1rNtC1kx5zg3LaQwetW', '_blank')"
           >
             BUY NOW
             <i class="fa fa-bolt" aria-hidden="true"></i>
@@ -107,6 +120,7 @@
           <button
             type="button"
             class="flex gap-2 items-center bg-[#7a43de] text-white px-3 py-2 rounded-md border-2 border-transparent hover:border-black"
+            onclick="window.open('https://sunpump.meme/token/TMiqVRZ928EsLgn1rNtC1kx5zg3LaQwetW', '_blank')"
           >
             DEXTOOLS
             <i class="fa fa-wheelchair-alt" aria-hidden="true"></i>
